--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,6 @@ ol {
 .content {
   display: flex;
   max-width: 1140px;
-  min-height: 534px;
   gap: 30px;
   align-items: end;
 }
@@ -111,7 +110,6 @@ ol {
   line-height: 21.6px;
   text-align: left;
   width: 225px;
-  min-height: 54px;
   gap: 5px;
   border: none;
 }
@@ -147,10 +145,15 @@ ol {
   border-right: 1px solid #fff;
 }
 
+input.search-form__textfield:focus {
+  outline: none;
+}
+
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
   outline-offset: 2px;
 }
+
 
 .search-form__pseudo-checkbox {
   position: relative;
@@ -212,7 +215,6 @@ ol {
 
 .content__details {
   max-width: 399px;
-  min-height: 534px;
   display: flex;
   flex-direction: column;
   gap: 26px;
